--- a/assets/scss/frontend/_doclist.scss
+++ b/assets/scss/frontend/_doclist.scss
@@ -928,6 +928,10 @@ body {
 		overflow-y: auto;
 		width: calc(100% + 35px);
 		padding-right: 10px;
+		
+		.ezd-subscription-btn {
+			margin-bottom: 20px;
+		}
 	}
 }
 
